Bug 147756 - Active Accessibility: get_accValue returning NS_ERROR_FAILURE for selects. r=kyle, sr=jst